@@ -1,3 +1,8 @@
+2004-12-13 Bart Hakvoort  <gparted@users.sf.net>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: Removed a couple of unnecesarry variables. (saves a few bytes in memory =) )
+
 2004-12-12 Bart Hakvoort  <gparted@users.sf.net>
 
 	* include/GParted_Core.h,
